--- a/Personal-portfolio/index.html
+++ b/Personal-portfolio/index.html
@@ -5,6 +5,7 @@
     <title>Fcc: Personal Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -104,6 +105,9 @@
       </div>
     </section>
     </div>
+
+    <script src="./app.js"></script>
+
 </body>
 
 </html>
